# rust-lab2

./: .gitignore  Cargo.toml
src/: lib.rs
