workspace = { members = ["test-lib"] }
[package]
name = "uj_tcs_rust_23_18"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "fun head and tail that print n firstl/ last lines"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uj_tcs_rust_23_18"
path = "src/lib.rs"

[dependencies]
